[ADD] SFTP protocol support

--- a/FtpDiligent.csproj
+++ b/FtpDiligent.csproj
@@ -12,16 +12,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentFTP" Version="32.4.0" />
     <PackageReference Include="MailKit" Version="2.6.0" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="1.1.2" />
-    <PackageReference Include="Oracle.ManagedDataAccess.Core" Version="2.19.60" />
+    <PackageReference Include="Oracle.ManagedDataAccess.Core" Version="2.19.70" />
+    <PackageReference Include="SSH.NET" Version="2016.1.0" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="Images\" />
     <Folder Include="Data\" />
-    <Folder Include="Logic\" />
   </ItemGroup>
 
   <ItemGroup>
