[REF] Moving SSH key to config file

--- a/App.config
+++ b/App.config
@@ -12,8 +12,9 @@
     <add key="CultureInfo" value="pl-PL"/>
     <add key="HotfolderInterval" value="3"/>
     <add key="CheckTransferedFile" value="true"/>
-    <add key="ErrorsMailTo" value="tup-waw@agora.pl"/>
+    <add key="ErrorsMailTo" value="siusiak@siusiak.pl"/>
     <add key="SyncMethod" value="UniqueDateAndSizeInDatabase"/>
     <add key="SendGridKey" value="SG.siusiak"/>
+    <add key="SftpKey" value="siusiak=="/>
   </appSettings>
 </configuration>
