[ADD] Ignore directories in filesystem watcher, simplified diagnostics, new images, cancel edit on ESC key

--- a/FtpDiligent.csproj
+++ b/FtpDiligent.csproj
@@ -30,6 +30,9 @@
     <Resource Include="Images\get.png" />
     <Resource Include="Images\put.png" />
     <Resource Include="Images\hot.png" />
+    <Resource Include="Images\err.png" />
+    <Resource Include="Images\warn.png" />
+    <Resource Include="Images\trans.png" />
     <Resource Include="Images\sterowanie.png" />
     <Resource Include="Images\serwer.png" />
     <Resource Include="Images\harmonogram.png" />
