--- a/FtpDiligent.csproj
+++ b/FtpDiligent.csproj
@@ -1,21 +1,22 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
   <PropertyGroup>
     <PlatformTarget>x64</PlatformTarget>
     <NoWarn>1701;1702;4014</NoWarn>
+    <ApplicationIcon>Images\ftpgetw.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentFTP" Version="32.4.3" />
-    <PackageReference Include="MailKit" Version="2.7.0" />
-    <PackageReference Include="Microsoft.Data.SqlClient" Version="2.0.0" />
-    <PackageReference Include="Oracle.ManagedDataAccess.Core" Version="2.19.70" />
+    <PackageReference Include="FluentFTP" Version="33.0.2" />
+    <PackageReference Include="MailKit" Version="2.9.0" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="2.0.1" />
+    <PackageReference Include="Oracle.ManagedDataAccess.Core" Version="2.19.91" />
     <PackageReference Include="SSH.NET" Version="2016.1.0" />
   </ItemGroup>
 
