[ADD] Autofac DI container

--- a/FtpDiligent.csproj
+++ b/FtpDiligent.csproj
@@ -13,6 +13,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="6.3.0" />
     <PackageReference Include="FluentFTP" Version="35.0.5" />
     <PackageReference Include="MailKit" Version="2.15.0" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="3.0.1" />
