--- a/FtpDiligent.csproj
+++ b/FtpDiligent.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
+    <LangVersion>12.0</LangVersion>
     <TargetFramework>net7.0-windows10.0.22621.0</TargetFramework>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
@@ -16,7 +17,7 @@
     <PackageReference Include="Autofac" Version="7.0.0" />
     <PackageReference Include="FluentFTP" Version="46.0.1" />
     <PackageReference Include="MailKit" Version="3.6.0" />
-    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.0" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
     <PackageReference Include="Oracle.ManagedDataAccess.Core" Version="3.21.90" />
     <PackageReference Include="SSH.NET" Version="2020.0.2" />
   </ItemGroup>
